# pkg/internal/apiroutes/routes.gen.go
@@ -1,0 +1,84 @@
+// Code generated by tools/apiroutes; DO NOT EDIT.
+package apiroutes
+
+// HTTP operation method and path templates are generated from api/openapi.yaml.
+const (
+	MethodControlRestEndpoint            = "POST"
+	PathControlRestEndpoint              = "/v2/endpoints/%s/control"
+	MethodCreateCodePair                 = "POST"
+	PathCreateCodePair                   = "/auth/create/codepair"
+	MethodDeregisterEndpoint             = "POST"
+	PathDeregisterEndpoint               = "/v2/endpoints/%s/deregister"
+	MethodExchangeRefreshTokenForCookies = "POST"
+	PathExchangeRefreshTokenForCookies   = "/ap/exchangetoken/cookies"
+	MethodExecuteNexusGraphQL            = "POST"
+	PathExecuteNexusGraphQL              = "/nexus/v1/graphql"
+	MethodFetchCsrfCookie                = "GET"
+	PathFetchCsrfCookie                  = "/api/language"
+	MethodForgetEndpoint                 = "POST"
+	PathForgetEndpoint                   = "/v2/endpoints/%s/forget"
+	MethodGetMediaPlayerState            = "GET"
+	PathGetMediaPlayerState              = "/api/np/player"
+	MethodGetRestEndpoint                = "GET"
+	PathGetRestEndpoint                  = "/v2/endpoints/%s"
+	MethodGetUserInfo                    = "GET"
+	PathGetUserInfo                      = "/api/users/me"
+	MethodListFirstPartyDevices          = "GET"
+	PathListFirstPartyDevices            = "/api/devices-v2/device"
+	MethodListRestEndpoints              = "GET"
+	PathListRestEndpoints                = "/v2/endpoints"
+	MethodOpenAuthorizationPage          = "GET"
+	PathOpenAuthorizationPage            = "/ap/oa"
+	MethodOpenDirectiveStream            = "GET"
+	PathOpenDirectiveStream              = "/v20160207/directives"
+	MethodPingDirectiveStream            = "GET"
+	PathPingDirectiveStream              = "/ping"
+	MethodQueryRestEndpoints             = "POST"
+	PathQueryRestEndpoints               = "/v2/endpoint-query"
+	MethodRefreshAccessToken             = "POST"
+	PathRefreshAccessToken               = "/auth/token"
+	MethodRegisterDevice                 = "POST"
+	PathRegisterDevice                   = "/auth/register"
+	MethodSendEndpointInterfaceMessage   = "POST"
+	PathSendEndpointInterfaceMessage     = "/v2/endpoints/%s/interfaces/%s/%s/"
+	MethodSendMediaCommand               = "POST"
+	PathSendMediaCommand                 = "/api/np/command"
+	MethodSubmitBehaviorPreview          = "POST"
+	PathSubmitBehaviorPreview            = "/api/behaviors/preview"
+	MethodUpdateEndpointFriendlyName     = "POST"
+	PathUpdateEndpointFriendlyName       = "/v2/endpoints/%s/friendlyName"
+	ServerAlexaAPIBaseNa                 = "https://api.amazonalexa.com"
+	ServerAlexaAPIBaseEu                 = "https://api.eu.amazonalexa.com"
+	ServerAlexaAPIBaseJp                 = "https://api.jp.amazonalexa.com"
+	ServerAmazonAPIBaseNa                = "https://api.amazon.com"
+	ServerAmazonAPIBaseEu                = "https://api.amazon.co.uk"
+	ServerAmazonAPIBaseJp                = "https://api.amazon.co.jp"
+	ServerAlexaWebBaseNa                 = "https://alexa.amazon.com"
+	ServerAlexaWebBaseEu                 = "https://alexa.amazon.co.uk"
+	ServerAlexaWebBaseJp                 = "https://alexa.amazon.co.jp"
+	ServerEventAuthorityNa               = "alexa.na.gateway.devices.a2z.com"
+	ServerEventAuthorityEu               = "alexa.eu.gateway.devices.a2z.com"
+	ServerEventAuthorityJp               = "alexa.fe.gateway.devices.a2z.com"
+	ServerExchangeRefreshTokenForCookies = "https://api.%s"
+)
+
+// ChannelDirectivesAddress and DirectiveStreamFraming are generated from api/asyncapi.yaml.
+const ChannelDirectivesAddress = "/v20160207/directives"
+
+type DirectiveStreamFraming struct {
+	LineDelimiter               byte
+	TrimWhitespace              bool
+	BoundaryPrefix              string
+	ContentTypePrefix           string
+	SkipEmptyLines              bool
+	AuthenticationFailureMarker string
+}
+
+var DirectiveFraming = DirectiveStreamFraming{
+	LineDelimiter:               "\n"[0],
+	TrimWhitespace:              true,
+	BoundaryPrefix:              "------",
+	ContentTypePrefix:           "Content-Type:",
+	SkipEmptyLines:              true,
+	AuthenticationFailureMarker: "Unable to authenticate the request. Please provide a valid authorization token.",
+}
